# reflectai

./: .gitignore  README.md
BADWHackathon/: blib2.py
fatcat/: README.md  download_wd_query.py  fatcat.py  layoutparsertest.py  pypdf2_extractor.py  pyproject.toml
fatcat/journals/: list_google.py
kg_pipeline/: main.py
kg_pipeline/relation_prediction/: knowgl_plugin.py
kg_pipeline/sentence_parser/: nltk_parser_plugin.py  trankit_parser_plugin.py
knowgl/: knowgl.ipynb  knowledge_graph.html  knowledge_graph_1000_wikipedia_articles.html  knowledge_graph_10_wikipedia_articles.html  pyproject.toml  singularity.def  statements.json
knowgl/data_import/: belvedere.py  cooper_hewitt.py  doaj.py  jstor.py  leiden.py  met.py  pinakothek.py  rijksmuseum.py  standardisiert_belvedere.jsonl  standardisiert_doaj.jsonl  standardisiert_met.jsonl  standardisiert_rijksmuseum.jsonl  standardisiert_tate.jsonl  tate.py  wikipedia.py
knowgl/data_import/example_jsonls/: cooper_hewitt.jsonl  extract_jstor.ipynb  rijksmuseum.jsonl
knowgl/devbox_knowgl/: knowgl_parser.py
knowgl/neo4j/: data.jsonl  neo4j.py  neofourj_2.py
knowgl/pipeline/: main.py  manager.py
knowgl/pipeline/coreference_resolution/: fastcoref_plugin.py
knowgl/pipeline/relation_prediction/: knowgl_plugin.py  main.py
knowgl/pipeline/relation_prediction/gollie_plugin/: __init__.py  utils_typing.py
knowgl/pipeline/sentence_parser/: main.py  nltk_parser_plugin.py  spacy_parser_plugin.py  trankit_parser_plugin.py
knowgl/pipeline/translation/: main.py  nllb200_plugin.py
knowgl/pipeline/utils/: sentence_merger.py
pipeline/: apptainer.def  main.py  plugin.py
pipeline/coref/: __init__.py  main.py
pipeline/coreference_resolution/: main.py
pipeline/language_detection/: xlm_roberta_plugin.py
pipeline/relation_prediction/: knowgl_plugin.py
pipeline/sentence_parser/: nltk_parser_plugin.py  (+1 more)
wp1/: README.md
wp1/fatcat/: README.md  apptainer.def  download_archive.py  fatcat.py  layoutparsertest.py  parsepdfs_layoutparser.py  pyproject.toml
wp1/fatcat/journals/: list_wd_query.py
wp2/: README.md
wp3/: README.md
wp4/: README.md
wp5/: README.md
(+314 files in other folders)
