[tool.poetry]
name = "knowgl"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
transformers = "^4.35.2"
ipykernel = "^6.27.0"
torchvision = "^0.16.1"
torchaudio = "^2.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
