[tool.poetry]
name = "fatcat"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.2"
pypdf2 = "^3.0.1"
pip = "^23.0"
install = "^1.3.5"
fatcat-openapi-client = "^0.5.0"
layoutparser = "^0.3.4"
numpy = "^1.24.2"
torchvision = "^0.15.1"
bs4 = "^0.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
